split between general and business

--- a/business.html
+++ b/business.html
@@ -97,10 +97,9 @@
     <img src="img/accorhotels_logo.svg" alt="AccorHotels Logo">
   </nav>
   <div class="container">
-    <h1 class="center">Engagement et Rétention des Clients Britanniques</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt eum nobis et. Eum earum neque reprehenderit expedita odio quaerat beatae quas quod, aut quasi. Odit assumenda cupiditate illo eaque eum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita distinctio, voluptatem recusandae accusamus ducimus laborum quia ab omnis possimus dicta quibusdam nulla corporis ad consequatur, doloremque illo natus molestias atque?</p>
-    <div id="chart_div1"></div>
-    <div id="chart_div2"></div>
+    <h1 class="center">Considérations Générales</h1>
+    <p>Notre première approche fut de regarder la part des clients qui n’ont eu aucune réservation dans les 24 derniers mois :</p>
+    <div id="chart_div1"></div>    <div id="chart_div2"></div>
     <div id="chart_div3"></div>
   </div>
 </body>
