--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     <p>Cette première étape nous a aussi permis de prendre de la hauteur et d’orienter notre réflexion. Après avoir organisé ces éléments sous forme de <a href="general.html" alt="">considérations générales</a> sur les clients d’AccorHotel et les hypothèses vérifiables posées, nous en avons choisit une que nous avons creusée ce qui nous a permis de tirer différentes conclusions. La deuxième partie de ce développement sera donc consacrée à la question de <a href="business.html" alt="">la rétention des clients business</a>.</p>
     <p>À partir de ces premiers enseignements nous avons pu poursuivre notre réflexion en posant de nouvelles hypothèses en croisant les résultats de la première avec d’autres critères. Nous avons donc essayé  d’analyser l’impact de la gamme et de la destination sur la rétention des clients business.</p>
     <p>L’application de cette méthodologie nous à alors permis de poser différentes <a href="recommandations.html" alt="">recommandations stratégique</a> applicable immédiatement et de lever un certain nombre de besoin pour pouvoir poursuivre cette recherche.</p>
+    <br />
   </div>
-  <nav>
+  <nav class="home">
     <a href="general.html" alt="">
       <figure>
         <img src="img/general.png" alt="" />
