--- a/leisure.html
+++ b/leisure.html
@@ -99,7 +99,7 @@
     </header>
   </a>
   <div class="container">
-    <h1 class="center">Business</h1>
+    <h1 class="center">Loisir</h1>
     <p>Notre première approche fut de regarder la part des clients qui n’ont eu aucune réservation dans les 24 derniers mois :</p>
     <div id="chart_div1"></div>    <div id="chart_div2"></div>
     <div id="chart_div3"></div>
